Fixed canvas overlap issue
hdbhk

--- a/TheJukeJoint/mainstyle.css
+++ b/TheJukeJoint/mainstyle.css
@@ -51,7 +51,7 @@
 }
 #turntable{
     width: 60%;
-    height: 100%;
+    height: 80%;
     position: absolute;
 
 
